[database homework][web_crawler] remove no use code
items:
(1)web and database

(2)web crawler
remove no use code
add get comment data but not finished yet

--- a/web_crawler/get_resturant_data.ipynb
+++ b/web_crawler/get_resturant_data.ipynb
@@ -25,41 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pageDetail(detail_url,i):\n",
-    "    res = requests.get(detail_url)\n",
-    "    soup =  BeautifulSoup(res.text)\n",
-    "    #all_data = soup.select('.search-result-list')\n",
-    "    #print(all_data)\n",
-    "    name = soup.select('.title-text')[i].text\n",
-    "    #print(name)\n",
-    "    address = soup.select('.address-row')[i].text\n",
-    "    #print(address)\n",
-    "    star = soup.select('.responsive')[i].text\n",
-    "    #print(star)\n",
-    "    comment_num = soup.select('.review-count')[i].text\n",
-    "    #print(comment_num)\n",
-    "    avg_price = soup.select('.avg-price')[i].text\n",
-    "    #print(avg_price)\n",
-    "    catergory = soup.select('.category-row')[i].text\n",
-    "    catergory = catergory[4:]\n",
-    "    #print(catergory)\n",
-    "    return {'name':name, 'address':address, 'star':star, 'comment_num':comment_num, 'avg_price':avg_price,'catergory':catergory}\n",
-    "    #print(\"------------------------------------------------------------------------------------------\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_comment(url):\n",
     "    browser = webdriver.Chrome(executable_path='/usr/bin/chromedriver')\n",
     "    browser.get(url)\n",
@@ -98,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pageDetail1(detail_url, resturant_series_num):\n",
+    "def pageDetail(detail_url, resturant_series_num):\n",
     "    #print(\"url:\")\n",
     "    #print( detail_url)\n",
     "    save_data = {}\n",
@@ -152,7 +117,7 @@
     "    \n",
     "    #get_comment(detail_url)\n",
     "\n",
-    "    #print(save_data)\n",
+    "    print(save_data)\n",
     "    print('-------------------------')\n",
     "    return save_data\n",
     "    \n",
@@ -199,7 +164,7 @@
    "outputs": [],
    "source": [
     "domain = 'https://ifoodie.tw'\n",
-    "resturant_ary1 = []\n",
+    "resturant_ary = []\n",
     "counter = 0\n",
     "resturant_series_num_counter = 0\n",
     "for page in range(1,2):\n",
@@ -224,9 +189,9 @@
     "        #print(resturant_type)\n",
     "        dic = {}\n",
     "        dic['link'] = domain + resturant.select('a')[0]['href']\n",
-    "        resturant_data = pageDetail1(dic['link'] , resturant_series_num)\n",
+    "        resturant_data = pageDetail(dic['link'] , resturant_series_num)\n",
     "        resturant_data.update(resturant_type)\n",
-    "        resturant_ary1.append(resturant_data)\n",
+    "        resturant_ary.append(resturant_data)\n",
     "        counter = counter + 1\n",
     "        resturant_series_num_counter = resturant_series_num_counter + 1"
    ]
@@ -237,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for j in resturant_ary1:\n",
+    "for j in resturant_ary:\n",
     "    print(j)\n",
     "    print('------------------------------------------------------------------------------------------------------------------------------------------------------------')"
    ]
