--- a/web_crawler/get_resturant_data.ipynb
+++ b/web_crawler/get_resturant_data.ipynb
@@ -29,7 +29,7 @@
     "    browser = webdriver.Chrome(executable_path='/usr/bin/chromedriver')\n",
     "    browser.get(url)\n",
     "    browser.implicitly_wait(1)\n",
-    "    time.sleep(1)\n",
+    "    #time.sleep(1)\n",
     "    \n",
     "    soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "    while len(soup.select('.user-checkin > .content > .btn-more-checkin-wrapper')) > 0:\n",
@@ -39,12 +39,20 @@
     "     \n",
     "    comment_all = []\n",
     "    comment_member = {}\n",
-    "    for i in range(len(soup.select('.checkin-list-outer > .comment-block-outer'))):   \n",
+    "    user_num = {}\n",
+    "    for i in range(len(soup.select('.checkin-list-outer > .comment-block-outer'))):  \n",
+    "        user_num = soup.select('.checkin-list-outer > .comment-block-outer > .comment-block > .comment-content-outer')[i]\n",
+    "        account = user_num.select('a')[0]['href']\n",
+    "        account = account[-24:]\n",
+    "        #print(account)\n",
+    "        comment_member['account'] = account \n",
+    "    \n",
+    "        \n",
     "        #comment_member[i] = soup.select('.checkin-list-outer > .comment-block-outer')[i].text\n",
     "        #comment_all.append(comment_member[i])\n",
     "        #soup.select('.checkin-list-outer > .comment-block-outer')[i].text\n",
-    "        c = soup.select('.checkin-list-outer > .comment-block-outer > .comment-block > .comment-content-outer')[i].text\n",
-    "        print(c)\n",
+    "        #c = soup.select('.checkin-list-outer > .comment-block-outer > .comment-block > .comment-content-outer')[i].text\n",
+    "        #print(c)\n",
     "        #print(c[0].text)\n",
     "        #print(c[1].text)\n",
     "        #print(c[2].text)\n",
@@ -93,25 +101,52 @@
     "    #print(save_data) \n",
     "    \n",
     "    data = soup.select('.info-outer > .info > div > span')\n",
-    "    address = data[1].text\n",
-    "    #print(address)\n",
-    "    save_data['address'] = address\n",
-    "    #print(save_data)\n",
     "    \n",
-    "    phone = data[3].text\n",
-    "    #print(phone)\n",
-    "    save_data['phone'] = phone\n",
-    "    #print(save_data)\n",
     "    \n",
-    "    avg_price_check = data[4].text\n",
-    "    #print(avg_price0)\n",
-    "    if avg_price_check == \"均消價位|\":\n",
-    "        avg_price = data[5].text\n",
-    "        avg_price = avg_price[3:]\n",
-    "    else:\n",
-    "        avg_price = 0\n",
+    "    try:\n",
+    "        address_check = data[0].text\n",
+    "        #print(address_check)\n",
+    "        if address_check == \"店家地址｜\":\n",
+    "            address = data[1].text\n",
+    "            #print(address)\n",
+    "            save_data['address'] = address\n",
+    "            #print(save_data)\n",
+    "    except IndexError:\n",
+    "        address = 'null'\n",
+    "        print(\"address wrong\")\n",
+    "        pass\n",
+    "    \n",
+    "    \n",
+    "    try:\n",
+    "        phone_check = data[2].text\n",
+    "        #print(phone_check)\n",
+    "        if phone_check == \"聯絡電話|\":\n",
+    "            phone = data[3].text\n",
+    "            #print(phone)\n",
+    "            save_data['phone'] = phone\n",
+    "            #print(save_data)\n",
+    "        else:\n",
+    "            phone = 'null'\n",
+    "    except IndexError:\n",
+    "        phone = 'null'\n",
+    "        print(\"phone wrong\")\n",
+    "        pass\n",
+    "    \n",
+    "    try:      \n",
+    "        avg_price_check = data[4].text\n",
+    "        #print(avg_price_check)\n",
+    "        if avg_price_check == \"均消價位|\":\n",
+    "            avg_price = data[5].text\n",
+    "            avg_price = avg_price[4:]\n",
+    "        else:\n",
+    "            avg_price = 0   \n",
     "    #print(avg_price)\n",
-    "    save_data['avg_price'] = avg_price\n",
+    "    except IndexError:   \n",
+    "        avg_price = 0\n",
+    "        print(\"avg price wrong\")\n",
+    "        pass\n",
+    "        \n",
+    "    save_data['avg_price'] = avg_price    \n",
     "    #print(save_data)\n",
     "    \n",
     "    \n",
@@ -153,6 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#for test\n",
     "test_RSN = deal_with_resturant_series_num(657)\n",
     "print(test_RSN)"
    ]
@@ -167,14 +203,11 @@
     "resturant_ary = []\n",
     "counter = 0\n",
     "resturant_series_num_counter = 0\n",
-    "for page in range(1,2):\n",
+    "for page in range(1,3):\n",
     "    resturant_url = 'https://ifoodie.tw/explore/%E5%8F%B0%E5%8C%97%E5%B8%82/list?page={}'\n",
     "    section = requests.get(resturant_url.format(page))\n",
     "    soup = BeautifulSoup(section.text)\n",
-    "    counter = 0\n",
-    "    \n",
-    "    resturant_series_num = deal_with_resturant_series_num(resturant_series_num_counter)\n",
-    "    \n",
+    "    counter = 0   \n",
     "    resturant_data = {}\n",
     "    resturant_type = {}\n",
     "    for resturant in soup.select('.restaurant-info'):      \n",
@@ -184,16 +217,27 @@
     "        if catergory != '':\n",
     "            resturant_type['type'] = catergory\n",
     "        else:\n",
-    "            resturant_type['type'] = '未定義'\n",
+    "            resturant_type['type'] = '小吃'\n",
     "            \n",
-    "        #print(resturant_type)\n",
+    "        print(resturant_type)\n",
     "        dic = {}\n",
     "        dic['link'] = domain + resturant.select('a')[0]['href']\n",
+    "        resturant_series_num = deal_with_resturant_series_num(resturant_series_num_counter)\n",
     "        resturant_data = pageDetail(dic['link'] , resturant_series_num)\n",
     "        resturant_data.update(resturant_type)\n",
     "        resturant_ary.append(resturant_data)\n",
     "        counter = counter + 1\n",
     "        resturant_series_num_counter = resturant_series_num_counter + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str = '59b901a222613946771733d2'\n",
+    "print(len(str))"
    ]
   },
   {
@@ -213,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = pd.DataFrame(resturant_ary1)"
+    "sub = pd.DataFrame(resturant_ary)"
    ]
   },
   {
@@ -242,6 +286,13 @@
    "source": [
     "sub.to_json(r'test.json')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
