[database homework][web_crawler] get comment data has finished
items:
(1)web and database

(2)web crawler
get comment has finished

--- a/web_crawler/get_resturant_data.ipynb
+++ b/web_crawler/get_resturant_data.ipynb
@@ -16,7 +16,8 @@
     "from selenium.webdriver.chrome.options import Options\n",
     "import csv\n",
     "import pandas as pd\n",
-    "import json"
+    "import json\n",
+    "import random"
    ]
   },
   {
@@ -25,44 +26,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_comment(url):\n",
+    "def get_comment(url, comment_ary):\n",
     "    browser = webdriver.Chrome(executable_path='/usr/bin/chromedriver')\n",
     "    browser.get(url)\n",
     "    browser.implicitly_wait(1)\n",
-    "    #time.sleep(1)\n",
+    "    sval = random.randint(1,3)\n",
+    "    time.sleep(sval)\n",
     "    \n",
     "    soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
     "    while len(soup.select('.user-checkin > .content > .btn-more-checkin-wrapper')) > 0:\n",
     "        browser.find_element_by_xpath(\"//button[@class='jss76 jss50 jss52 jss55 btn-more-checkin']\").click()\n",
-    "        time.sleep(1)\n",
+    "        sval = random.randint(1,3)\n",
+    "        time.sleep(sval)\n",
     "        soup = BeautifulSoup(browser.page_source, 'html.parser')\n",
-    "     \n",
-    "    comment_all = []\n",
-    "    comment_member = {}\n",
-    "    user_num = {}\n",
+    "        \n",
+    "    user_num = {}   \n",
     "    for i in range(len(soup.select('.checkin-list-outer > .comment-block-outer'))):  \n",
+    "        comment_member = {}\n",
+    "        comment_restaurant = soup.select('.restaurant-name-outer > h1 > a')[0].text\n",
+    "        #print(comment_restaurant)\n",
+    "        comment_member['restaurant'] = comment_restaurant\n",
+    "        \n",
+    "        \n",
     "        user_num = soup.select('.checkin-list-outer > .comment-block-outer > .comment-block > .comment-content-outer')[i]\n",
     "        account = user_num.select('a')[0]['href']\n",
     "        account = account[-24:]\n",
     "        #print(account)\n",
     "        comment_member['account'] = account \n",
+    "        \n",
+    "        try:\n",
+    "            name_path = '.content > .checkin-list-outer > div:nth-child(' + str(i+1) +') > .comment-block > .comment-content-outer > div > .username-outer > .username'\n",
+    "            name = soup.select(name_path)[0].text\n",
+    "            #print(name)    \n",
+    "        except IndexError:\n",
+    "            print(\"name wrong\")\n",
+    "            name = \"鄉民\"\n",
+    "            pass\n",
+    "        comment_member['name'] = name\n",
     "    \n",
-    "        \n",
-    "        #comment_member[i] = soup.select('.checkin-list-outer > .comment-block-outer')[i].text\n",
-    "        #comment_all.append(comment_member[i])\n",
-    "        #soup.select('.checkin-list-outer > .comment-block-outer')[i].text\n",
-    "        #c = soup.select('.checkin-list-outer > .comment-block-outer > .comment-block > .comment-content-outer')[i].text\n",
-    "        #print(c)\n",
-    "        #print(c[0].text)\n",
-    "        #print(c[1].text)\n",
-    "        #print(c[2].text)\n",
-    "        #print(c[3].text)\n",
-    "    #print(comment_member)\n",
+    "        try:\n",
+    "            level_path = '.content > .checkin-list-outer > div:nth-child(' + str(i+1) + ') > .comment-block > .comment-content-outer > div > .username-outer > a:nth-child(2) > span'\n",
+    "            level = soup.select(level_path)[0].text\n",
+    "            #print(level)\n",
+    "        except IndexError:\n",
+    "            print(\"comment level wrong\")\n",
+    "            level = \"普通會員\"\n",
+    "            pass\n",
+    "        comment_member['level'] = level\n",
     "        \n",
     "        \n",
-    "    time.sleep(5)\n",
-    "    browser.close() \n",
-    "    #return "
+    "        try:      \n",
+    "            comment_star = 0\n",
+    "            comment_star_path = '.content > .checkin-list-outer > div:nth-child(' + str(i+1) + ') > .comment-block > .comment-content-outer > div > .info-outer > div > div > .text'        \n",
+    "            comment_star = soup.select( comment_star_path)[0].text\n",
+    "            #print(comment_star)\n",
+    "        except IndexError:   \n",
+    "            comment_star = 0\n",
+    "            print(\"comment star wrong\")\n",
+    "            pass\n",
+    "        comment_member['comment_star'] =  comment_star\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        comment_path = '.content > .checkin-list-outer > div:nth-child(' + str(i+1) + ') > .comment-block > .comment-content-outer > div > .message'\n",
+    "        comment = soup.select(comment_path)[0].text\n",
+    "        #print(comment)\n",
+    "        comment_member['comment'] = comment \n",
+    "        #print(i)\n",
+    "        #print(comment_member)\n",
+    "        #print('+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++')\n",
+    "        #ave data to array\n",
+    "        comment_ary.append(comment_member)  \n",
+    "        #print(comment_ary)\n",
+    "        #print('=============================================================================================')\n",
+    "\n",
+    "#     for j in comment_ary:\n",
+    "#         print(j)\n",
+    "#         print('=============================================================================================')\n",
+    "    #print(comment_ary)\n",
+    "    sval = random.randint(4,6)\n",
+    "    time.sleep(sval)\n",
+    "    browser.close() "
    ]
   },
   {
@@ -71,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pageDetail(detail_url, resturant_series_num):\n",
+    "def pageDetail(detail_url, restaurant_series_num, comment_ary):\n",
     "    #print(\"url:\")\n",
     "    #print( detail_url)\n",
     "    save_data = {}\n",
@@ -82,39 +126,56 @@
     "    #tag = input(\"請輸入定位元素，class前面加上.，id前面加上# \")  \n",
     "    #for drink in soup.select('{}'.format(tag)):\n",
     "        #print(drink.get_text())\n",
-    "    save_data['resturant_series_num'] = resturant_series_num\n",
+    "    save_data['restaurant_series_num'] = restaurant_series_num\n",
     "    \n",
-    "    name =  soup.select('.title-outer > .title')[0].text\n",
-    "    #print(name)\n",
-    "    save_data['name'] = name\n",
-    "    #print(save_data)\n",
     "    \n",
-    "    star = soup.select('.jsx-1207467136')[0].text\n",
-    "    #print(star)\n",
+    "    try:\n",
+    "        name =  soup.select('.title-outer > .title')[0].text\n",
+    "        #print(name)\n",
+    "    except IndexError: \n",
+    "        name = \"沒店名\"\n",
+    "        print(\"no store name\")\n",
+    "        pass\n",
+    "    save_data['name'] = name    \n",
+    "    \n",
+    "    try:\n",
+    "        star = soup.select('.jsx-1207467136')[0].text\n",
+    "        #print(star)    \n",
+    "    except IndexError:\n",
+    "        star = 0\n",
+    "        print(\"no star\")\n",
+    "        pass\n",
     "    save_data['star'] = star\n",
-    "    #print(save_data)\n",
     "    \n",
-    "    comment_num = soup.select('.count')[0].text\n",
-    "    comment_num = int(comment_num[:-3])\n",
-    "    #print(comment_num)\n",
+    "    \n",
+    "    \n",
+    "    try:\n",
+    "        comment_num = soup.select('.count')[0].text\n",
+    "        comment_num = int(comment_num[:-3])\n",
+    "        #print(comment_num)  \n",
+    "    except IndexError:\n",
+    "        comment_num = 0\n",
+    "        print(\"comment_num wrong\")\n",
+    "        pass\n",
     "    save_data['comment_num'] = comment_num\n",
-    "    #print(save_data) \n",
+    "    \n",
     "    \n",
     "    data = soup.select('.info-outer > .info > div > span')\n",
-    "    \n",
     "    \n",
     "    try:\n",
     "        address_check = data[0].text\n",
     "        #print(address_check)\n",
-    "        if address_check == \"店家地址｜\":\n",
+    "        address = \"\"\n",
+    "        if address_check == \"店家地址|\":\n",
     "            address = data[1].text\n",
     "            #print(address)\n",
-    "            save_data['address'] = address\n",
-    "            #print(save_data)\n",
     "    except IndexError:\n",
-    "        address = 'null'\n",
+    "        address = \"null\"\n",
     "        print(\"address wrong\")\n",
     "        pass\n",
+    "    \n",
+    "    save_data['address'] = address\n",
+    "    \n",
     "    \n",
     "    \n",
     "    try:\n",
@@ -122,15 +183,15 @@
     "        #print(phone_check)\n",
     "        if phone_check == \"聯絡電話|\":\n",
     "            phone = data[3].text\n",
-    "            #print(phone)\n",
-    "            save_data['phone'] = phone\n",
-    "            #print(save_data)\n",
+    "            #print(phone)   \n",
     "        else:\n",
     "            phone = 'null'\n",
     "    except IndexError:\n",
     "        phone = 'null'\n",
     "        print(\"phone wrong\")\n",
-    "        pass\n",
+    "        pass   \n",
+    "    save_data['phone'] = phone\n",
+    "    \n",
     "    \n",
     "    try:      \n",
     "        avg_price_check = data[4].text\n",
@@ -140,21 +201,19 @@
     "            avg_price = avg_price[4:]\n",
     "        else:\n",
     "            avg_price = 0   \n",
-    "    #print(avg_price)\n",
+    "        #print(avg_price)\n",
     "    except IndexError:   \n",
     "        avg_price = 0\n",
     "        print(\"avg price wrong\")\n",
     "        pass\n",
-    "        \n",
     "    save_data['avg_price'] = avg_price    \n",
-    "    #print(save_data)\n",
-    "    \n",
-    "    \n",
-    "    #get_comment(detail_url)\n",
+    "\n",
+    "    get_comment(detail_url, comment_ary)\n",
     "\n",
     "    print(save_data)\n",
     "    print('-------------------------')\n",
     "    return save_data\n",
+    "\n",
     "    \n",
     "    "
    ]
@@ -165,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deal_with_resturant_series_num(num):\n",
+    "def deal_with_restaurant_series_num(num):\n",
     "    RSN = 'RSN_0'\n",
     "    length = len(str(num))\n",
     "    if length == 1:\n",
@@ -189,7 +248,7 @@
    "outputs": [],
    "source": [
     "#for test\n",
-    "test_RSN = deal_with_resturant_series_num(657)\n",
+    "test_RSN = deal_with_restaurant_series_num(657)\n",
     "print(test_RSN)"
    ]
   },
@@ -200,34 +259,35 @@
    "outputs": [],
    "source": [
     "domain = 'https://ifoodie.tw'\n",
-    "resturant_ary = []\n",
+    "restaurant_ary = []\n",
+    "comment_ary = []\n",
     "counter = 0\n",
-    "resturant_series_num_counter = 0\n",
-    "for page in range(1,3):\n",
-    "    resturant_url = 'https://ifoodie.tw/explore/%E5%8F%B0%E5%8C%97%E5%B8%82/list?page={}'\n",
-    "    section = requests.get(resturant_url.format(page))\n",
+    "restaurant_series_num_counter = 0\n",
+    "for page in range(1,5):\n",
+    "    restaurant_url = 'https://ifoodie.tw/explore/%E5%8F%B0%E5%8C%97%E5%B8%82/list?page={}'\n",
+    "    section = requests.get(restaurant_url.format(page))\n",
     "    soup = BeautifulSoup(section.text)\n",
     "    counter = 0   \n",
-    "    resturant_data = {}\n",
-    "    resturant_type = {}\n",
-    "    for resturant in soup.select('.restaurant-info'):      \n",
+    "    restaurant_data = {}\n",
+    "    restaurant_type = {}\n",
+    "    for restaurant in soup.select('.restaurant-info'):      \n",
     "        catergory = soup.select('.category-row')[counter].text\n",
     "        catergory = catergory[4:]\n",
     "        #print(catergory)\n",
     "        if catergory != '':\n",
-    "            resturant_type['type'] = catergory\n",
+    "            restaurant_type['type'] = catergory\n",
     "        else:\n",
-    "            resturant_type['type'] = '小吃'\n",
+    "            restaurant_type['type'] = '小吃'\n",
     "            \n",
-    "        print(resturant_type)\n",
+    "        #print(restaurant_type)\n",
     "        dic = {}\n",
-    "        dic['link'] = domain + resturant.select('a')[0]['href']\n",
-    "        resturant_series_num = deal_with_resturant_series_num(resturant_series_num_counter)\n",
-    "        resturant_data = pageDetail(dic['link'] , resturant_series_num)\n",
-    "        resturant_data.update(resturant_type)\n",
-    "        resturant_ary.append(resturant_data)\n",
+    "        dic['link'] = domain + restaurant.select('a')[0]['href']\n",
+    "        restaurant_series_num = deal_with_restaurant_series_num(restaurant_series_num_counter)\n",
+    "        restaurant_data = pageDetail(dic['link'] , restaurant_series_num, comment_ary)\n",
+    "        restaurant_data.update(restaurant_type)\n",
+    "        restaurant_ary.append(restaurant_data)\n",
     "        counter = counter + 1\n",
-    "        resturant_series_num_counter = resturant_series_num_counter + 1"
+    "        restaurant_series_num_counter = restaurant_series_num_counter + 1"
    ]
   },
   {
@@ -236,6 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#ex comment member number\n",
     "str = '59b901a222613946771733d2'\n",
     "print(len(str))"
    ]
@@ -246,7 +307,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for j in resturant_ary:\n",
+    "for j in restaurant_ary:\n",
     "    print(j)\n",
     "    print('------------------------------------------------------------------------------------------------------------------------------------------------------------')"
    ]
@@ -257,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub = pd.DataFrame(resturant_ary)"
+    "sub_restaurant = pd.DataFrame(restaurant_ary)"
    ]
   },
   {
@@ -266,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub"
+    "sub_restaurant"
    ]
   },
   {
@@ -275,7 +336,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub.to_csv(\"test.csv\", index=False)"
+    "sub_restaurant.to_csv(\"raw_data/restaurant.csv\", index=False)\n",
+    "sub_restaurant.to_json(r'raw_data/restaurant.json')"
    ]
   },
   {
@@ -284,8 +346,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sub.to_json(r'test.json')"
+    "for j in comment_ary:\n",
+    "    print(j)\n",
+    "    print('------------------------------------------------------------------------------------------------------------------------------------------------------------')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_comment = pd.DataFrame(comment_ary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_comment.to_csv(\"raw_data/comment.csv\", index=False)\n",
+    "sub_comment.to_json(r'raw_data/comment.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
