[database homework][web_crawler] fill TYPE_number into type.csv
items:
(1)web and database

(2)web crawler
  modify dealwith_restaurant_type.ipynb to fill TYPE_number

--- a/web_crawler/dealwith_restaurant_type.ipynb
+++ b/web_crawler/dealwith_restaurant_type.ipynb
@@ -288,18 +288,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for_type_data_NUM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deal_with_type_num(num):\n",
+    "    type_number = 'TYPE_'\n",
+    "    length = len(str(num))\n",
+    "    if length == 1:\n",
+    "        type_number = type_number + '000' + str(num)\n",
+    "    elif length == 2:\n",
+    "        type_number = type_number + '00' + str(num)\n",
+    "    elif length == 3:\n",
+    "        type_number = type_number + '0' + str(num) \n",
+    "    elif length == 4:\n",
+    "        type_number = type_number + str(num)  \n",
+    "    #print(type_number)\n",
+    "    return type_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "get_type_num = 3\n",
     "get_type_all = []\n",
     "type_counter = 0\n",
     "get_type_temp = {}\n",
-    "type_num = 0\n",
+    "type_index = 0\n",
     "for i in for_type_data_NUM:\n",
     "    type_counter = 0\n",
-    "    type_val = for_type_data_TYPE[type_num] \n",
+    "    type_val = for_type_data_TYPE[type_index] \n",
     "    #print(type_val)\n",
     "    for j in range(len(type_check)):\n",
     "        if type_val.find(type_check[j]) != -1:\n",
     "            get_type_temp = {}\n",
+    "            \n",
+    "            get_type_temp['TYPE_NUM'] = deal_with_type_num(type_index) \n",
+    "            \n",
     "            get_type_temp['RST_NUM'] = i \n",
     "            temp_val = modify_type_format(type_check[j])\n",
     "            get_type_temp['TYPE_NAME'] = temp_val\n",
@@ -312,7 +345,7 @@
     "        get_type_temp['RST_NUM'] = i \n",
     "        get_type_temp['TYPE_NAME'] = '小吃'\n",
     "        get_type_all.append(get_type_temp)\n",
-    "    type_num = type_num + 1\n",
+    "    type_index = type_index + 1\n",
     "#print(get_type_all)        "
    ]
   },
@@ -325,6 +358,13 @@
     "TYPE = pd.DataFrame(get_type_all)\n",
     "TYPE.to_csv(\"data_done/type.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
